# ROSForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
ci-templates/github/: action.yml  example-workflow.yml
ci-templates/gitlab/: .gitlab-ci-rosforge.yml
doc/: Concept.md  ROSForge PRD Supplement.md  ROSForge_PRD_v1.0.md
src/rosforge/: __init__.py  __main__.py
src/rosforge/cli/: __init__.py  analyze.py  app.py  config_cmd.py  migrate.py  migrate_workspace.py  status.py  ui.py
src/rosforge/config/: defaults.py  manager.py
src/rosforge/engine/: base.py  prompt_builder.py  response_parser.py
src/rosforge/engine/claude/: api_backend.py  cli_backend.py
src/rosforge/engine/gemini/: api_backend.py  cli_backend.py
src/rosforge/engine/openai/: api_backend.py  cli_backend.py
src/rosforge/knowledge/: __init__.py  api_mappings.py  cmake_rules.py  custom_rules.py  launch_rules.py  msg_srv_rules.py  package_xml_rules.py
src/rosforge/models/: __init__.py  config.py  ir.py  plan.py  report.py  result.py
src/rosforge/parsers/: __init__.py  cmake.py  cpp_source.py  launch_xml.py  msg_srv.py  package_scanner.py  package_xml.py  python_source.py  workspace_scanner.py
src/rosforge/pipeline/: __init__.py  analyze.py  fix.py  ingest.py  interactive.py  report.py  runner.py  stage.py  transform.py  validate.py  validate_fix_loop.py  workspace_runner.py
src/rosforge/telemetry/: __init__.py  collector.py  events.py
src/rosforge/templates/: migration_report.md.j2  workspace_report.md.j2
src/rosforge/utils/: __init__.py  fs.py  git.py  logging.py  subprocess_utils.py
tests/: conftest.py
tests/e2e/: test_cli.py
tests/fixtures/catkin_ws/src/pkg_a/: CMakeLists.txt  package.xml
tests/fixtures/catkin_ws/src/pkg_b/: CMakeLists.txt  package.xml
tests/fixtures/ros1_launch/: CMakeLists.txt  package.xml  talker_listener.launch
tests/fixtures/ros1_launch/launch/: robot.launch
tests/fixtures/ros1_minimal/: CMakeLists.txt  package.xml
tests/fixtures/ros1_minimal/src/: talker.cpp
tests/fixtures/ros1_mixed/: CMakeLists.txt  package.xml
tests/fixtures/ros1_mixed/launch/: mixed.launch
tests/fixtures/ros1_mixed/msg/: Alert.msg
tests/fixtures/ros1_mixed/scripts/: monitor.py
tests/fixtures/ros1_mixed/src/: sensor_node.cpp
tests/fixtures/ros1_msgs/: CMakeLists.txt  package_format1.xml
tests/fixtures/ros1_msgs/msg/: Pose2D.msg  StringArray.msg
tests/fixtures/ros1_python/: CMakeLists.txt  package.xml
tests/fixtures/ros1_python/scripts/: listener.py
tests/fixtures/ros1_with_msgs/: CMakeLists.txt  package.xml
tests/fixtures/ros1_with_msgs/msg/: Greeting.msg  Status.msg
tests/fixtures/ros1_with_msgs/srv/: SayHello.srv
tests/integration/: test_fixtures.py  test_ingest_stage.py  test_pipeline.py
tests/unit/: test_analyze_stage.py  test_api_mappings.py  test_api_mappings_extended.py  test_ci_templates.py  test_cli_app.py  test_cmake_rules.py  test_config_manager.py  test_custom_rules.py  test_engine.py  test_engine_backends.py  test_fix_stage.py  test_interactive_stage.py  test_knowledge.py  test_launch_rules.py  test_models.py  test_msg_srv_rules.py  test_package_xml_rules.py  test_parsers.py  test_parsers_extended.py  test_prompt_builder.py  test_report_stage.py  test_response_parser.py  test_telemetry.py  test_utils_fs.py  test_utils_git.py  test_validate_fix_loop.py  test_validate_stage.py  test_workspace_runner.py  test_workspace_scanner.py
