[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosforge"
version = "0.2.0"
description = "AI-driven ROS1 to ROS2 migration CLI tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "ROSForge Contributors" }]
keywords = ["ros", "ros2", "migration", "robotics", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "typer>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "pydantic>=2.0,<3.0",
    "tomli-w>=1.0,<2.0",
    "jinja2>=3.1,<4.0",
    "lxml>=5.0,<6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40,<1.0"]
gemini = ["google-generativeai>=0.8"]
openai = ["openai>=1.50,<2.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-mock",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = ["rosforge[claude,gemini,openai]"]

[project.scripts]
rosforge = "rosforge.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rosforge"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["B008", "E501", "RUF002", "RUF003", "RUF059"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811", "N806", "RUF043"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
warn_unused_ignores = false
check_untyped_defs = true
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
