<?xml version="1.0"?>
<package format="2">
  <name>ros1_minimal</name>
  <version>0.1.0</version>
  <description>A minimal ROS1 C++ talker node</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
