<?xml version="1.0"?>
<package format="2">
  <name>ros1_python</name>
  <version>0.1.0</version>
  <description>A minimal ROS1 Python listener node</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
