<?xml version="1.0"?>
<package format="2">
  <name>pkg_a</name>
  <version>0.1.0</version>
  <description>Test package A for workspace fixture.</description>
  <maintainer email="test@example.com">Test</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
